# mailer

./: CMakeLists.txt  README.md  package.json
examples/: build.cmake  main.c
sources/: build.cmake  mailer.c  mailer.h
